--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+
     defaultConfig {
         applicationId "com.shouzhong.scanner.demo"
         minSdkVersion 15
@@ -11,26 +11,26 @@ android {
         versionName "1.0"
 
         ndk {
-//            abiFilters 'armeabi-v7a', 'arm64-v8a'
-            abiFilters 'armeabi-v7a'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+//            abiFilters 'armeabi-v7a'
         }
     }
-    //签名配置
-    signingConfigs {
-        config {
-            keyAlias "123456"
-            keyPassword "123456"
-            storeFile file("/test.jks")
-            storePassword "123456"
-        }
-    }
+//    //签名配置
+//    signingConfigs {
+//        config {
+//            keyAlias "123456"
+//            keyPassword "123456"
+//            storeFile file("/test.jks")
+//            storePassword "123456"
+//        }
+//    }
 
     buildTypes {
         debug {
-            signingConfig signingConfigs.config
+//            signingConfig signingConfigs.config
         }
         release {
-            signingConfig signingConfigs.config
+//            signingConfig signingConfigs.config
             minifyEnabled true
             zipAlignEnabled true
             shrinkResources true
