--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+
 
     defaultConfig {
         minSdkVersion 15
@@ -33,4 +33,4 @@ dependencies {
 }
 
 //发布 Jcenter
-apply from: 'bintray.gradle'
+//apply from: 'bintray.gradle'
