--- a/licenseplate/build.gradle
+++ b/licenseplate/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+
 
     defaultConfig {
         minSdkVersion 15
@@ -10,27 +10,27 @@ android {
         versionCode 1
         versionName "1.0"
 
-        ndk {
-            moduleName "LicensePlate"
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
-        }
-
-        externalNativeBuild {
-            cmake {
-                cppFlags "-std=c++11"
-            }
-        }
+//        ndk {
+//            moduleName "LicensePlate"
+//            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+//        }
+//
+//        externalNativeBuild {
+//            cmake {
+//                cppFlags "-std=c++11"
+//            }
+//        }
     }
 
-    externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt"
-        }
-    }
+//    externalNativeBuild {
+//        cmake {
+//            path "CMakeLists.txt"
+//        }
+//    }
 }
 
 dependencies {
 }
 
 //发布 Jcenter
-apply from: 'bintray.gradle'
+//apply from: 'bintray.gradle'
