--- a/text/build.gradle
+++ b/text/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+
 
     defaultConfig {
         minSdkVersion 15
@@ -15,22 +15,22 @@ android {
             abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
         }
 
-        externalNativeBuild {
-            cmake {
-                cppFlags "-std=c++11"
-            }
-        }
+//        externalNativeBuild {
+//            cmake {
+//                cppFlags "-std=c++11"
+//            }
+//        }
     }
 
-    externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt"
-        }
-    }
+//    externalNativeBuild {
+//        cmake {
+//            path "CMakeLists.txt"
+//        }
+//    }
 }
 
 dependencies {
 }
 
 //发布 Jcenter
-apply from: 'bintray.gradle'
+//apply from: 'bintray.gradle'
